gerrit: linkify references to Analytics Mingle projects.
All of the following (and some other) expressions now link to Mingle
card 42 on our Mingle's analytics project:
    analytics card 42
    analytics card #42
    analytics-card 42
    analytics-card #42
    Card: analytics 42
    Card: analytics-42
    Card:analytics#42

Change-Id: Ic79b7e74ca716670512af4e0496474c6b97f8761

--- a/templates/gerrit/gerrit.config.erb
+++ b/templates/gerrit/gerrit.config.erb
@@ -80,6 +80,9 @@
 [commentlink "cve"]
         match = "\\b(CVE\\-\\d{4}\\-\\d+)\\b"
         link = https://cve.mitre.org/cgi-bin/cvename.cgi?name=$1
+[commentlink "mingle-analytics"]
+        match = "\\b([aA]nalytics\\s*[:-]?\\s*[cC]ard|[cC]ard\\s*[:-]?\\s*[aA]nalytics)\\s*\\#?\\s*(\\d+)\\b"
+        link = https://mingle.corp.wikimedia.org/projects/analytics/cards/$2
 [mimetype "application/javascript"]
 	safe = true
 [mimetype "application/x-php"]
