--- a/templates/apache/sites/git.wikimedia.org.erb
+++ b/templates/apache/sites/git.wikimedia.org.erb
@@ -48,8 +48,8 @@ NameVirtualHost *:443
 	SSLCipherSuite AES128-GCM-SHA256:RC4-SHA:RC4-MD5:DES-CBC3-SHA:AES128-SHA:AES256-SHA
 	SSLHonorCipherOrder on
 	SSLCertificateFile /etc/ssl/certs/<%= ssl_cert %>.pem
+	SSLCertificateChainFile /etc/ssl/certs/<%= ssl_cert %>.chained.pem
 	SSLCertificateKeyFile /etc/ssl/private/<%= ssl_cert_key %>.key
-	SSLCACertificatePath /etc/ssl/certs/
 
 	RequestHeader set X-Forwarded-Proto https
 	RequestHeader set X-Forwarded-Port 443
