--- a/templates/apache/sites/metrics.wikimedia.org.erb
+++ b/templates/apache/sites/metrics.wikimedia.org.erb
@@ -50,8 +50,8 @@
   SSLCipherSuite AES128-GCM-SHA256:RC4-SHA:RC4-MD5:DES-CBC3-SHA:AES128-SHA:AES256-SHA
   SSLHonorCipherOrder on
   SSLCertificateFile    /etc/ssl/certs/<%= site_name %>.pem
+  SSLCertificateChainFile /etc/ssl/certs/<%= site_name %>.chained.pem
   SSLCertificateKeyFile /etc/ssl/private/<%= site_name %>.key
-  SSLCACertificatePath  /etc/ssl/certs/
 
   WSGIDaemonProcess api user=<%= metrics_user %> group=wikidev threads=1 python-path=<%= e3_analysis_path %>
   WSGIScriptAlias / <%= document_root %>/api.wsgi
