--- a/templates/apache/sites/planet.erb
+++ b/templates/apache/sites/planet.erb
@@ -8,8 +8,8 @@
 	SSLCipherSuite AES128-GCM-SHA256:RC4-SHA:RC4-MD5:DES-CBC3-SHA:AES128-SHA:AES256-SHA
 	SSLHonorCipherOrder on
 	SSLCertificateFile /etc/ssl/certs/star.planet.<%= planet_domain_name %>.pem
+	SSLCertificateChainFile /etc/ssl/certs/star.planet.<%= planet_domain_name %>.chained.pem
 	SSLCertificateKeyFile /etc/ssl/private/star.planet.<%= planet_domain_name %>.key
-	SSLCACertificatePath /etc/ssl/certs/
 
 	RewriteEngine on
 	RewriteRule (.*) http://%{HTTP_HOST}%{REQUEST_URI} [R=301]
