--- a/templates/misc/gbp.conf.erb
+++ b/templates/misc/gbp.conf.erb
@@ -16,56 +16,103 @@ builder = debuild -i -I -us -uc -sa
 #debian-tag = debian/%(version)s
 # use pristine-tar:
 pristine-tar = True
+# don't check if debian-branch == current branch:
+#ignore-branch = True
+# Use color when on a terminal, alternatives: on/true, off/false or auto
+#color = auto
 
 # Options only affecting git-buildpackage
 [git-buildpackage]
+# Look for a tag matching the upstream version when creating a tarball
+#upstream-tree = tag
+# uncomment this to automatically GPG sign tags:
 #upstream-branch = dfsgclean
 # uncomment this to automatically GPG sign tags
 #sign-tags = True
-# keyid to GPG sign tags with
+# keyid to GPG sign tags with:
 #keyid = 0xdeadbeef
-# push to a remote repository after a successful tag: 
+# push to a remote repository after a successful tag:
 #posttag = git-push git.example.com
 # call lintian after a successful build:
 #postbuild = lintian $GBP_CHANGES_FILE
+# let package generate upstream changelog before build:
+#prebuild = GIT_DIR=$GBP_GIT_DIR debian/autogen.sh
 # use this for more svn-buildpackage like behaviour:
 #export-dir = ../build-area/
 #tarball-dir = ../tarballs/
 #ignore-new = True
 #export = HEAD
-# Compress with bzip2
+# compress with bzip2
 #compression = bzip2
-# Use best compression
+# use best compression
 #compression-level = best
+# Don't send notifications, alternatives: on/true, off/false or auto
+#notify = off
+# Transparently handle submodules
+# submodules = True
 
 # Options only affecting git-import-orig
 [git-import-orig]
+# set a different upstream branch to import to:
 #upstream-branch = newupstream
+# set a different branch to merge to:
 #debian-branch = dfsgclean
+# don't merge to debian branch by default:
+#merge = False
+# import filter:
 #filter = .svn
-# filter out files from tarball passed to pristine tar
+# filter out files from tarball passed to pristine tar:
 #filter-pristine-tar = True
-# hook run after the import:
+# run hook after the import:
 #postimport = git-dch -N%(version)s -S -a --debian-branch=$GBP_BRANCH
 # emulate old behaviour of calling dch:
 #postimport = dch -v%(version)s New Upstream Version
+# commit message:
+#import-msg = New upstream version %(version)s
 
 # Options only affecting git-import-dsc
 [git-import-dsc]
+# set a different upstream branch:
 #upstream-branch = svn-upstream
+# import filter:
 #filter = [ 'CVS', '.cvsignore' ]
+#force committer to be the same as author
+#author-is-committer = True
+#same for the date
+#author-date-is-committer-date = True
 
 # Options only affecting git-dch
 [git-dch]
+# options passed to git-log:
 #git-log = --no-merges
+# next snapshot number:
 #snapshot-number = snapshot + 1
-# include 0 digits of the commit id in the changelog enty
-#id-length = 0
-# don't include information from meta tags
+# include 7 digits of the commit id in the changelog enty:
+#id-length = 7
+# don't include information from meta tags:
 #meta = False
-# what tags to look for to generate bug-closing changelog entries
+# what tags to look for to generate bug-closing changelog entries:
 #meta-closes = Closes|LP
-#full = False
+# include the full commit message in the changelog:
+#full = True
+# ignore Signed-off-by: lines:
 #Ignore Signed-off-by: lines:
 #ignore-regex=(Signed-off|Acked)-by:
+# use author name and email from git-config:
 git-author = True
+
+# Options only affecting gbp-pq
+[gbp-pq]
+#patch-numbers = False
+
+# Options only affecting gbp-clone
+[gbp-clone]
+#pristine-tar = True
+
+# Options only affecting gbp-
+[gbp-pull]
+#pristine-tar = True
+
+[gbp-create-remote-repo]
+# disable remote branch tracking
+#track = False
