Pass on requests with a mediaWiki.user.sessionId cookie
Apparently these are set by JS on some paths, currently (at least)
ULS does this.

Change-Id: I4fe4502fa722b42138bc4e422104410425ac9cc9

--- a/templates/varnish/text-common.inc.vcl.erb
+++ b/templates/varnish/text-common.inc.vcl.erb
@@ -10,6 +10,9 @@ sub pass_requests {
 	if (req.http.Host == "login.wikimedia.org") {
 		return (pass);
 	}
+	if (req.http.Cookie ~ "mediaWiki.user.sessionId=") {
+		return (pass);
+	}
 }
 
 sub cookie_munging {
