fix Apache syntax error 'Illegal override option Nonesta' in stats.wikimedia.org/htdocs/reportcard/pediapress that prevented Apache graceful
Change-Id: I73c8a150eaeb8782ebaf852c52ad099e2f7185df

--- a/templates/apache/sites/stats.wikimedia.org.erb
+++ b/templates/apache/sites/stats.wikimedia.org.erb
@@ -46,7 +46,7 @@ common_config = <<END
 		Require user internal
 	</Directory>
 	<Directory "/srv/stats.wikimedia.org/htdocs/reportcard/pediapress">
-		AllowOverride Nonesta
+		AllowOverride None
 		Order allow,deny
 		Allow from all
 		AuthName "Password protected area"
