--- a/templates/varnish/mobile-frontend.inc.vcl.erb
+++ b/templates/varnish/mobile-frontend.inc.vcl.erb
@@ -102,12 +102,6 @@ sub vcl_recv {
 }
 
 sub vcl_fetch {
-	set beresp.http.X-CS = req.http.X-CS;
-	if ( beresp.http.X-Analytics ) {
-		# Do nothing, X-Analytics has already been handled
-	} else if ( req.http.X-Analytics ) {
-		set beresp.http.X-Analytics = req.http.X-Analytics;
-	}
 	if (req.url ~ "mobileaction=" || req.url ~ "useformat=") {
 		set beresp.ttl = 60 s;
 	}
@@ -139,6 +133,17 @@ sub vcl_error {
 }
 
 sub vcl_deliver {
+	# remove X-CS & X-Analytics from beresp if they happen to have it.
+	# We used to incorrectly set them in vcl_fetch(), which means that our
+	# cache is now poisoned with non-varied cached objects that have this
+	# incorrectly set with random carriers. Clean up after ourselves.
+	unset beresp.http.X-CS;
+	if (req.http.X-Analytics) {
+		set beresp.http.X-Analytics = req.http.X-Analytics;
+	} else {
+		unset beresp.http.X-Analytics;
+	}
+
 	if (resp.http.Cache-Control ~ "s-maxage=[1-9]") {
 		set resp.http.Cache-Control = "s-maxage=300, must-revalidate, max-age=0";
 	} else {
