--- a/templates/gerrit/gerrit.config.erb
+++ b/templates/gerrit/gerrit.config.erb
@@ -65,7 +65,7 @@
 	match = \\b(I[0-9a-f]{7,40})\\b
 	link = "#q,$1,n,z"
 [commentlink "commit"]
-	match = (^|\\s|[:.,!?\\(\\[\\{])([0-9a-f]{7,40})\\b
+	match = (^|\\s|[:,!?\\(\\[\\{])([0-9a-f]{7,40})\\b
 	link = "#q,$2,n,z"
 [commentlink "bugzilla"]
 	match =  "\\b[bB][uU][gG]\\:?\\s+#?(\\d+)\\b"
