--- a/templates/varnish/mobile-backend.inc.vcl.erb
+++ b/templates/varnish/mobile-backend.inc.vcl.erb
@@ -31,6 +31,10 @@ sub vcl_recv {
 }
 
 sub vcl_fetch {
+	if (beresp.http.Enable-ESI == "1") {
+		set beresp.do_esi = true;
+	}
+
 	if (req.url ~ "mobileaction=" || req.url ~ "useformat=") {
 		set beresp.ttl = 60 s;
 	}
