--- a/templates/varnish/mobile-frontend.inc.vcl.erb
+++ b/templates/varnish/mobile-frontend.inc.vcl.erb
@@ -87,6 +87,13 @@ sub vcl_recv {
 
 	set req.hash_ignore_busy = true;
 
+	if (req.http.X-CS == "-TEST") {
+		set req.http.X-FORCE-ESI = "1";
+	}
+	else {
+		unset req.http.X-FORCE-ESI;
+	}
+
 	/* Default (now modified) Varnish vcl_recv function */
 	if (req.request != "GET" && req.request != "HEAD") {
 		/* We only deal with GET and HEAD by default */
@@ -100,6 +107,10 @@ sub vcl_recv {
 }
 
 sub vcl_fetch {
+	if (beresp.http.Enable-ESI == "1") {
+		set beresp.do_esi = true;
+	}
+
 	if (req.url ~ "mobileaction=" || req.url ~ "useformat=") {
 		set beresp.ttl = 60 s;
 	}
@@ -131,6 +142,8 @@ sub vcl_error {
 }
 
 sub vcl_deliver {
+	unset resp.http.Enable-ESI;
+
 	# remove X-CS & X-Analytics from resp if they happen to have it.  We
 	# used to incorrectly set them in vcl_fetch(), which means that our
 	# cache is now poisoned with non-varied cached objects that have this
