--- a/modules/nrpe/templates/nrpe_local.cfg.erb
+++ b/modules/nrpe/templates/nrpe_local.cfg.erb
@@ -24,6 +24,7 @@ command[check_mysqld]=/usr/lib/nagios/plugins/check_procs -c 1:1 -C mysqld
 command[check_carbon_cache]=/usr/lib/nagios/plugins/check_procs -c 1:2 -a carbon-cache.py
 command[check_profiler_to_carbon]=/usr/lib/nagios/plugins/check_procs -c 1:1 --ereg-argument-array='^/usr/bin/python /usr/udpprofile/sbin/profiler-to-carbon'
 command[check_profiling_collector]=/usr/lib/nagios/plugins/check_procs -c 1:20 -C collector
+command[check_etherpad]=/usr/lib/nagios/plugins/check_procs -c 1:2 --ereg-argument-array='^/bin/sh /usr/share/etherpad-lite/bin/safeRun.sh'
 
 # swift process checks (RT-2593)
 command[check_swift_account_auditor]=/usr/lib/nagios/plugins/check_procs -c 1: --ereg-argument-array='^/usr/bin/python /usr/bin/swift-account-auditor'
