Typo fix for etherpad-lite settings
Now it is valid json plus some whitespace cleanup

Change-Id: I0307e3c47a0ea09bdcf3bc789c65118988fa8b2c

--- a/templates/etherpad_lite/settings.json.erb
+++ b/templates/etherpad_lite/settings.json.erb
@@ -22,10 +22,10 @@
 	"requireAuthentication": false,
 	"requireAuthorization": false,
 	"socketTransportProtocols" : ["xhr-polling", "jsonp-polling", "htmlfile"],
-	"loglevel": "INFO"
+	"loglevel": "INFO",
 	"logconfig" :
 		{ "appenders": [
-		    { "type": "console" 
+		    { "type": "console"
 		    //, "category": "access"// only logs pad access
 		    }
 		  ]
