Bug 54406: Speed up Parsoid job processing
Parsoid jobs were not dequeued fast enough to keep up during heavy editing.
The API load has been hovering around 30%, which leaves some room for higher
Parsoid dequeue rates.

This patch doubles the peak dequeue rate for Parsoid jobs. This will increase
the load on the API cluster by at most ~10%, likely closer to 5%. We'll
monitor the load on deployment.

Change-Id: I1a9aa38b2ef7f1eac6bba9c516690b2b1452a276

--- a/modules/mediawiki/templates/jobrunner/jobs-loop.sh.erb
+++ b/modules/mediawiki/templates/jobrunner/jobs-loop.sh.erb
@@ -211,7 +211,7 @@ else
 	hpriotypes="$hpriotypes uploadFromUrl" # upload
 	(runJobsLoopService "$hpriotypes" "y" <%= dprioprocs %>) &
 	# Start loops for highly I/O bound jobs that work on special services (e.g. not the DBs)
-	(runJobsLoopService "ParsoidCacheUpdateJob" "n" <%= procs_per_iobound_type %>) &
+        (runJobsLoopService "ParsoidCacheUpdateJob" "n"  $((<%= procs_per_iobound_type %> * 2)) ) &
 fi
 
 wait
