use clientaddrUsesPort and a high port to send out outgoing SNMP requests per man snmp.conf so that non-root users can bind to it and we avoid getting SNMP permission denied errors when icinga runs these and we send the client IP since I9c7b1c11aeef2ff984ab25c7c81514be3c5897db
Change-Id: I2e8b31459e78e5fd743cc817faeab82971aa1e26

--- a/modules/base/templates/snmp.conf.erb
+++ b/modules/base/templates/snmp.conf.erb
@@ -4,9 +4,10 @@
 ######################################################################
 mibs :
 <% if has_variable?('::ipaddress_bond0') then %>
-clientaddr <%= scope.lookupvar('::ipaddress_bond0') %>
+clientaddr <%= scope.lookupvar('::ipaddress_bond0') %>:5061
 <% elsif has_variable?('::ipaddress_eth0') then %>
-clientaddr <%= scope.lookupvar('::ipaddress_eth0') %>
+clientaddr <%= scope.lookupvar('::ipaddress_eth0') %>:5061
 <% else %>
-clientaddr <%= scope.lookupvar('::ipaddress') %>
+clientaddr <%= scope.lookupvar('::ipaddress') %>:5061
 <% end %>
+clientaddrUsesPort yes
