contint: simplify apache listen template
I am not sure what I had in mind previously, but using a bunch of
non working ruby was not really smart.

The localvhost template now accepts 'port' and would simply make Apache
listen locally for HTTP.

Change-Id: I7ae6bb2047da1e4fa07bf234bf5e499f91b30da7

--- a/modules/contint/templates/apache/listen.erb
+++ b/modules/contint/templates/apache/listen.erb
@@ -4,15 +4,6 @@
 ######################################################################
 
 # Ports Apache is listening to in addition to the default ports:
-<%
-# Apache Listen format is:
-# Listen [IP-address:]portnumber [protocol]
-@apache_listens.sort.each do |l|
-	# Tweak ip and proto to match Apache format
-	ip = l.fetch('ip', '')
-	ip += ':' if ip != ''
-	proto = l.fetch('protocol', '')
-	proto = ' ' + proto if proto != ''
--%>
-	Listen <%= ip -%><%= l.fetch('port') -%><%= proto -%>
-<% end -%>
+
+Listen 127.0.0.1:<%= @port %> http
+Listen [::1]:<%= @port %> http
