--- a/templates/varnish/mobile-frontend.inc.vcl.erb
+++ b/templates/varnish/mobile-frontend.inc.vcl.erb
@@ -131,16 +131,20 @@ sub vcl_error {
 }
 
 sub vcl_deliver {
-	# remove X-CS & X-Analytics from resp if they happen to have it.  We
-	# used to incorrectly set them in vcl_fetch(), which means that our
+	unset resp.http.X-CS;
+
+	# We used to incorrectly set them in vcl_fetch(), which means that our
 	# cache is now poisoned with non-varied cached objects that have this
 	# incorrectly set with random carriers. Clean up after ourselves.
-	unset resp.http.X-CS;
-	if (req.http.X-Analytics) {
-		# FIXME: replace with std.log()
-		set resp.http.X-Analytics = req.http.X-Analytics;
-	} else {
+	if (resp.http.Vary !~ "X-CS" && resp.http.X-Analytics ~ "zero=") {
+		# no Vary: X-CS and zero in X-Analytics is an invalid combination
 		unset resp.http.X-Analytics;
+	}
+
+	if (resp.http.X-Analytics) {
+		# do nothing, MediaWiki has handled X-Analytics
+	} else if (req.http.X-Analytics) {
+		set resp.http.X-Analytics = req.http.X-Analytics;
 	}
 
 	if (resp.http.Cache-Control ~ "s-maxage=[1-9]") {
