contint: Apache could not start without IPv6
Whenever we are lacking IPv6 (aka in labs), the `Listen [:1]:80`
statement would prevent Apache from starting up.

The has_ipv6 variable in the template would let us skip the IPv6 listen
statement.  Disable it for labs realm.

Change-Id: I507dbed356fac0b40f749655ac5d2e55618b875b

--- a/modules/contint/templates/apache/listen.erb
+++ b/modules/contint/templates/apache/listen.erb
@@ -6,4 +6,6 @@
 # Ports Apache is listening to in addition to the default ports:
 
 Listen 127.0.0.1:<%= @port %> http
+<% if @has_ipv6 -%>
 Listen [::1]:<%= @port %> http
+<% end -%>
