Reverse order of class / sites check
Some classes are completely irrelevant for some sites. By changing the order
we don't need to handle each site in every class.

Change-Id: Ibebc56cbfecd2a808d5a216d9bbc045120080163

--- a/modules/pybal/templates/pybal.conf.erb
+++ b/modules/pybal/templates/pybal.conf.erb
@@ -14,7 +14,7 @@ bgp-nexthop-ipv6 = <%= global_options['bgp-nexthop-ipv6'] %>
 #
 
 <% lvs_services.sort.each do |servicename, service| -%>
-<% if lvs_class_hosts[service['class']].include?(scope.lookupvar("::hostname")) and service['sites'].include?(site) then -%>
+<% if service['sites'].include?(site) and lvs_class_hosts[service['class']].include?(scope.lookupvar("::hostname")) then -%>
 <% if service['ip'].class.eql?(String) then
 service['ip'] = { servicename => service['ip'] }
 end -%>
