Parsoid frontends VCL: strip X-Parsoid-Performance from cache hits
Avoid reporting stale performance data if request was a cache hit.

Related changes:

- I1d7fd94f2 (Parsoid): add X-Parsoid-Performance header
- I8085fdba3 (VisualEditor): pass thru XPP to client

The check for X-Cache hits in I8085fdba3 makes this redundant, but
I think it's cleaner this way.

Change-Id: I11f416e7a80b0e1ecf31b5f679273ae70728d102

--- a/templates/varnish/parsoid-frontend.inc.vcl.erb
+++ b/templates/varnish/parsoid-frontend.inc.vcl.erb
@@ -14,3 +14,10 @@ sub vcl_miss {
 sub vcl_fetch {
 	set beresp.ttl = 0s;
 }
+
+sub vcl_deliver {
+    // Don't report stale performance data if request was a cache hit.
+    if (obj.hits > 0) {
+        unset resp.http.X-Parsoid-Performance;
+    }
+}
