--- a/templates/swift/proxy-server.conf.erb
+++ b/templates/swift/proxy-server.conf.erb
@@ -30,12 +30,14 @@ account_autocreate = true
 <% if scope.lookupvar("swift::proxy::config::auth_backend") == 'swauth' -%>
 [filter:swauth]
 use = egg:swauth#swauth
+token_life = 604800
 default_swift_cluster = local#<%= scope.lookupvar("swift::proxy::config::proxy_address") %>/v1
 set log_name = swauth
 super_admin_key = <%= scope.lookupvar("swift::proxy::config::super_admin_key") %>
 <% elsif scope.lookupvar("swift::proxy::config::auth_backend") == 'tempauth' -%>
 [filter:tempauth]
 use = egg:swift#tempauth
+token_life = 604800
 user_admin_admin = <%= scope.lookupvar("swift::proxy::config::super_admin_key") %> .admin .reseller_admin <%= scope.lookupvar("swift::proxy::config::proxy_address") %>/v1/AUTH_admin
 user_mw_media = <%= scope.lookupvar("swift::proxy::config::rewrite_password") %> .admin <%= scope.lookupvar("swift::proxy::config::proxy_address") %>/v1/AUTH_mw
 <% end -%>
