Add Icinga check for l10nupdate & drop !log-based alerts
Localisation update is the only job that uses !log to issue alerts, to my
knowledge, and it does so indiscriminantly, spamming the server admin log with
both successes and failures. It's not clear to me that anyone takes its
failures very seriously, either. (The last run failed, for example.)

This patch adds an Icinga plug-in that checks the status of the localisation
cache. It issues a WARNING if the caches are >26 hours old, and a CRITICAL if
over >50. The numbers were chosen because l10nupdate runs once a day and takes
some arbitrary fraction of an hour to complete, and because failures are (in my
anecdotal experience) typically given another shot to self-correct before being
debugged.

With the Icinga check in effect, it would not be necessary (or appropriate) for
l10nupdate to use the SAL, so this patch also updates l10nupdate-1 to echo
verbose log messages to standard out instead. (The l10nupdate cron job
redirects stdout to a log file.)

Change-Id: I6eca6c063319a2663bb25d76a92709103c9dd88a

--- a/templates/icinga/checkcommands.cfg.erb
+++ b/templates/icinga/checkcommands.cfg.erb
@@ -418,6 +418,10 @@ define command{
 	command_name	check_eventlogging_jobs
 	command_line	/usr/lib/nagios/plugins/check_eventlogging_jobs
 }
+define command{
+	command_name	check_l10n_cache
+	command_line	/usr/local/lib/nagios/plugins/check_l10n_cache
+}
 
 
 #Generic NRPE check
