--- a/templates/swift/proxy-server.conf.erb
+++ b/templates/swift/proxy-server.conf.erb
@@ -4,13 +4,12 @@
 bind_port = <%= @bind_port %>
 workers = <%= @num_workers %>
 user = swift
-# You can enable default statsD logging here and/or override it in sections
-# below:
-## statsd logging disabled for the initial releas of 1.5.0
-#log_statsd_host = localhost
-#log_statsd_port = 8125
-#log_statsd_default_sample_rate = 1
-#log_statsd_metric_prefix =
+<% if @statsd_host -%>
+log_statsd_host = <%= @statsd_host %>
+<% end -%>
+<% if @statsd_metric_prefix -%>
+log_statsd_metric_prefix = <%= @statsd_metric_prefix %>
+<% end -%>
 
 [pipeline:main]
 <% if @auth_backend == 'swauth' -%>
