--- a/templates/exim/exim4.conf.SMTP_IMAP_MM.erb
+++ b/templates/exim/exim4.conf.SMTP_IMAP_MM.erb
@@ -571,7 +571,7 @@ otrs:
 	driver = manualroute
 	domains = +local_domains
 	condition = ${lookup mysql{SELECT value0 FROM system_address WHERE value0='${quote_mysql:$local_part@$domain}'}{true}fail}
-	route_list = *  williams.wikimedia.org  byname
+	route_list = *  iodine.wikimedia.org  byname
 	transport = remote_smtp
 <% end %>
 <% if enable_imap_delivery == "true" then -%>
