--- a/templates/varnish/zero.inc.vcl.erb
+++ b/templates/varnish/zero.inc.vcl.erb
@@ -5,29 +5,49 @@ import netmapper;
 sub vcl_init {
 	// args here are map-name (for .map()), data file, and seconds between mtime checks for reload
 	netmapper.init("zero", "/var/netmapper/zero.json", 89);
+	netmapper.init("proxies", "/var/netmapper/proxies.json", 89);
+}
+
+sub tag_direct {
+	set req.http.X-CS2 = netmapper.map("zero", "" + client.ip);
+	unset req.http.X-Forwarded-By;
 }
 
 sub tag_carrier {
 	// Note that currently, tag_carrier is *only* called when the request is not
 	//  via HTTPS (check for X-Forwarded-Proto at the top of vcl_recv in mobile-frontend.vcl).
 
-	set req.http.X-CS2 = netmapper.map("zero", "" + client.ip);
+	set req.http.X-Forwarded-By = netmapper.map("proxies", "" + client.ip);
 
-	if (req.restarts == 0 && (req.http.X-CS2 == "-OPERA" || req.http.X-CS2 == "-TEST")) {
+	if (!req.http.X-Forwarded-By || req.http.X-Forwarded-By != "OPERA") {
+		// direct request or unknown proxy
+		call tag_direct;
+	} else if (req.restarts == 0) {
 		// Elsewhere in the VCL, the frontend appends client.ip to XFF for when
 		//   we forward to the backend varnish, and thus at this exact moment in time,
 		//   the final (or only) XFF entry always exists and always matches client.ip.
 		//   So we must first get past this and look for the next entry to the left
-		//   (if any) to find the XFF value set by another upstream proxy such as
-		//   Opera Mini or Carrier Testing (or in the future, SSL).
+		//   (if any) to find the XFF value set by a proxy possibly using zero-rating
+		//   (currently, Opera Mini).
 
 		set req.http.X-Stripped-XFF = regsub(req.http.X-Forwarded-For, ",?[^,]+$", "");
 		// ^ X-S-XFF now contains XFF without its final item, which was client.ip.
 
 		if (req.http.X-Stripped-XFF != "") { // If one or more IPs remain in X-S-XFF
+			// For proxies, W0 banners will be shown when traffic flowed through a proxy
+			// and the carrier's configuration is known to zero-rate through that proxy.
 			// Strip away any leading IPs, such that the result of regsub() is the
 			//  rightmost (or only) remaining IP, and use that to re-set X-CS2:
 			set req.http.X-CS2 = netmapper.map("zero", regsub(req.http.X-Stripped-XFF, "^.*, ?", ""));
+			if (!req.http.X-CS2 || req.http.X-CS2 == '652-02' || req.http.X-CS2 == '612-03' || req.http.X-CS2 == '410-01' || req.http.X-CS2 == '250-99' || req.http.X-CS2 == '297-01' || req.http.X-CS2 == '502-16' || req.http.X-CS2 == '470-01') {
+				// Let processing continue below
+			} else {
+				// Let processing continue below, should hit first if
+				set req.http.X-CS2 = false;
+			}
+		} else {
+			// Actually a direct request (maybe a diagnostic)
+			call tag_direct;
 		}
 		unset req.http.X-Stripped-XFF; // clean up our temp var
 	}
@@ -59,7 +79,7 @@ sub tag_carrier {
 		}
 	} else if (req.http.X-CS2 == "502-16") {
 		if (req.http.X-Subdomain == "ZERO") {
-			if (req.http.User-Agent ~ "Opera") {
+			if (req.http.X-Forwarded-By == "OPERA") {
 				set req.http.X-CS = "502-16";
 			}
 		}
@@ -173,4 +193,8 @@ sub tag_carrier {
 	/* Please keep the above list alphabetized by the ACL variable */
 
 	unset req.http.X-CS2; // temp variable for netmapper -> X-CS stuff
+	// Seeing as the origin servers won't need it, no need to send XFB.
+	// As of 13-December-2013, Opera Mini is the only proxy setup with
+	// zero-rating with some carriers.
+	unset req.http.X-Forwarded-By;
 }
