Add an extra header for cache variance of W0 banners for proxies.
Change-Id: I5120597b30eafddc3dbd434fb8d55bee82c47295

--- a/templates/varnish/zero.inc.vcl.erb
+++ b/templates/varnish/zero.inc.vcl.erb
@@ -21,6 +21,7 @@ sub tag_carrier {
 		//   (if any) to find the XFF value set by another upstream proxy such as
 		//   Opera Mini or Carrier Testing (or in the future, SSL).
 
+		set req.http.X-Known-Proxy = "OPERA";
 		set req.http.X-Stripped-XFF = regsub(req.http.X-Forwarded-For, ",?[^,]+$", "");
 		// ^ X-S-XFF now contains XFF without its final item, which was client.ip.
 
