--- a/modules/protoproxy/templates/localssl.erb
+++ b/modules/protoproxy/templates/localssl.erb
@@ -1,12 +1,6 @@
 # Proxy site configuration file for <%= name %>
 # This file is managed by Puppet!
 
-upstream localhost {
-	# max fails is ignored when using one host, so we use the same host twice
-	server 127.0.0.1:<%= @upstream_port %>;
-	server 127.0.0.1:<%= @upstream_port %>;
-}
-
 # SSL proxying
 server {
 	listen [::]:443 ssl;
@@ -21,7 +15,7 @@ server {
 	keepalive_timeout 60;
 
 	location / {
-		proxy_pass http://localhost;
+		proxy_pass http://127.0.0.1:<%= @upstream_port %>;
 
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
