Enable elastic search plugins
Provide the elasticsearch module with a parameter to allow configuring
plugin location and then use it in the role class to point to plugins
deployed via git-deploy/sartoris. Plugins gerrit repository is at
operations/software/elasticsearch/plugins

Change-Id: Ib6722236530f3f7b7991258e98eba5da451d7612

--- a/modules/elasticsearch/templates/elasticsearch.yml.erb
+++ b/modules/elasticsearch/templates/elasticsearch.yml.erb
@@ -162,7 +162,7 @@ node.name: <%= @hostname %>
 
 # Path to where plugins are installed:
 #
-# path.plugins: /path/to/plugins
+path.plugins: <%= @plugins_dir %>
 
 
 #################################### Plugin ###################################
