Log Puppet run times to StatsD via custom Puppet reporter
* Adds a new module, 'puppet_statsd'. The module implements a Puppet reporter
  that sends timing measurements for Puppet runs to a StatsD server.
  (See <http://docs.puppetlabs.com/guides/reporting.html> for context.)
* Module is enabled in base.pp for all nodes.
* Override default value for metric name template to strip host. I suspect the
  focus for now will be to optimize the Puppet master setup, so it's more
  useful to look at Puppet performance in aggregate rather than how Puppet is
  doing on a particular node.

What I tested:
* The puppet_statsd module itself.

What I didn't test:
* The changes in base/*. (I tested on Vagrant instead.)

Change-Id: I17d966fc2ff9bac6e169eacce84dfe5ea05797b5

--- a/modules/base/templates/puppet.conf.d/10-main.conf.erb
+++ b/modules/base/templates/puppet.conf.d/10-main.conf.erb
@@ -18,4 +18,5 @@ splay = true
 prerun_command = /etc/puppet/etckeeper-commit-pre
 postrun_command = /etc/puppet/etckeeper-commit-post
 pluginsync = true
-report = false
+report = true
+reports = statsd
