Change deploy repo config to repo => config
This change reduces the number of pillars necessary to configure
git deploy to repo_config and deployment_config. It also greatly
reduces the configuration needed for new repos in most cases to
only needing a grain defined.

repo_config is a set of configuration hashes, per repo.
deployment_config is a configuration hash meant for global config
for the deployment server. In the system some of the repo_config
is generated using the deployment_config.

Change-Id: Ice02ed0a33bc43e411561d94aae81d0b5c77ccf0

--- a/modules/deployment/templates/pillars/top.sls.erb
+++ b/modules/deployment/templates/pillars/top.sls.erb
@@ -1,4 +1,5 @@
 base:
   'deployment_target:*':
     - match: grain
-    - deployment
+    - deployment.repo_config
+    - deployment.deployment_config
