--- a/modules/deployment/templates/deploy_runner.conf.erb
+++ b/modules/deployment/templates/deploy_runner.conf.erb
@@ -1,1 +1,6 @@
-deployment_repo_grains: {<% deployment_repo_grains.sort.each do |repo, grain| %>'<%= repo %>': '<%= grain %>',<% end %>}
+<%
+_deployment_grains = {}
+repo_config.each do |repo, config|
+  _deployment_grains[repo] = config['grain']
+end
+%>deployment_repo_grains: {<% _deployment_grains.sort.each do |repo, grain| %>'<%= repo %>': '<%= grain %>',<% end %>}
