en.planet - add gsoc student feeds
+ Pragun Bhutani - http://blog.pragunbhutani.in/feed.xml
+ Kothari Harsh - https://kothariharsh.wordpress.com/tag/wikimedia/feed/

request from [[meta:Planet_Wikimedia]] by Nemo

Change-Id: I4d30320de673bf05457632bc8811d2c9e9649507

--- a/templates/planet/en_config.erb
+++ b/templates/planet/en_config.erb
@@ -555,3 +555,9 @@ name=Wikimedia India
 
 [http://www.dereckson.be/blog/category/wikimedia/feed/]
 name=Dereckson
+
+[https://kothariharsh.wordpress.com/tag/wikimedia/feed/]
+name=Kothari Harsh
+
+[http://blog.pragunbhutani.in/feed.xml]
+name=Pragun Bhutani
