--- a/modules/mysql/templates/my.cnf.erb
+++ b/modules/mysql/templates/my.cnf.erb
@@ -1,12 +1,19 @@
+###
+####    This file managed by puppet.
+###
+
+
 [client]
 port    = <%= port %>
 socket    = <%= socket %>
+
 [mysqld_safe]
 socket    = <%= socket %>
 nice    = 0
 <% if log_error == 'syslog' -%>
 syslog
 <% end -%>
+
 [mysqld]
 user    = mysql
 pid-file  = <%= pidfile %>
@@ -14,11 +21,11 @@ socket    = <%= socket %>
 port      = <%= port %>
 basedir   = <%= basedir %>
 datadir   = <%= datadir %>
-tmpdir    = /a/tmp
+tmpdir    = /tmp
 skip-external-locking
 
 <% if bind_address %>
-bind-address    = <%= bind_address %>
+bind_address    = <%= bind_address %>
 <% end %> 
 
 key_buffer         = 1M
@@ -46,7 +53,9 @@ ssl-key   = <%= ssl_key %>
 quick
 quote-names
 max_allowed_packet = 16M
+
 [mysql]
+
 [isamchk]
 key_buffer    = 16M
 <% if multi_instance == true -%>
