--- a/files/gerrit/mail/ChangeSubject.vm
+++ b/files/gerrit/mail/ChangeSubject.vm
@@ -31,9 +31,4 @@
 ## The ChangeSubject.vm template will determine the contents of the email
 ## subject line for ALL emails related to changes.
 ##
-#macro(elipses $length $str)
-#if($str.length() > $length)#set($length = $length - 3)${str.substring(0,$length)}...#else$str#end
-#end
-##Change in $projectName.replaceAll('/.*/', '...')[$branch.shortName]: #elipses(63, $change.subject)
-#macro(bracketed $str)($str)#end
-[Gerrit] #elipses(63, $change.subject) - change #bracketed($projectName.replaceAll('/.*/', '...')[$branch.shortName])
+PFA a Patchset. Please do the needful! Thank you sir!
