--- a/modules/mysql/templates/apparmor.template.usr.sbin.mysqld.erb
+++ b/modules/mysql/templates/apparmor.template.usr.sbin.mysqld.erb
@@ -24,17 +24,17 @@
   /etc/mysql/*.pem r,
   /etc/mysql/conf.d/ r,
   /etc/mysql/conf.d/* r,
-  <%= config_file %> r,
+  <%= config_hash['config_file'] %> r,
   /usr/sbin/mysqld mr,
   /usr/share/mysql/** r,
   /var/log/mysql.log rw,
   /var/log/mysql.err rw,
-  <%= datadir %>/ r,
-  <%= datadir %>/** rwk,
+  <%= config_hash['datadir'] %>/ r,
+  <%= config_hash['datadir'] %>/** rwk,
   /var/log/mysql/ r,
   /var/log/mysql/* rw,
-  <%= pidfile %> w,
-  <%= socket %> w,
+  <%= config_hash['pidfile'] %> w,
+  <%= config_hash['socket'] %> w,
 
   /sys/devices/system/cpu/ r,
 }
