--- a/modules/mysql/templates/apparmor.template.usr.sbin.mysqld.erb
+++ b/modules/mysql/templates/apparmor.template.usr.sbin.mysqld.erb
@@ -24,7 +24,7 @@
   /etc/mysql/*.pem r,
   /etc/mysql/conf.d/ r,
   /etc/mysql/conf.d/* r,
-  <%= config_hash['config_file'] %> r,
+  <%= config_file %> r,
   /usr/sbin/mysqld mr,
   /usr/share/mysql/** r,
   /var/log/mysql.log rw,
@@ -33,8 +33,8 @@
   <%= config_hash['datadir'] %>/** rwk,
   /var/log/mysql/ r,
   /var/log/mysql/* rw,
-  <%= config_hash['pidfile'] %> w,
-  <%= config_hash['socket'] %> w,
+  <%= pidfile %> w,
+  <%= socket %> w,
 
   /sys/devices/system/cpu/ r,
 }
