add sidebar links for new planet languages
Change-Id: Ie60daf944cacd52b740e9c7d530ede0a2e27f12e
todo: have this generated from hash as well

--- a/templates/planet/index.html.tmpl.erb
+++ b/templates/planet/index.html.tmpl.erb
@@ -122,6 +122,7 @@ Powered by:<br>
 <li><a href="http://en.planet.wikimedia.org/">en.planet.wm</a></li>
 <li><a href="http://es.planet.wikimedia.org/">es.planet.wm</a></li>
 <li><a href="http://gmq.planet.wikimedia.org/">gmq.planet.wm</a></li>
+<li><a href="http://id.planet.wikimedia.org/">id.planet.wm</a></li>
 <li><a href="http://it.planet.wikimedia.org/">it.planet.wm</a></li>
 <li><a href="http://ja.planet.wikimedia.org/">ja.planet.wm</a></li>
 <li><a href="http://pl.planet.wikimedia.org/">pl.planet.wm</a></li>
@@ -129,6 +130,7 @@ Powered by:<br>
 <li><a href="http://ro.planet.wikimedia.org/">ro.planet.wm</a></li>
 <li><a href="http://ru.planet.wikimedia.org/">ru.planet.wm</a></li>
 <li><a href="http://sr.planet.wikimedia.org/">sr.planet.wm</a></li>
+<li><a href="http://uk.planet.wikimedia.org/">uk.planet.wm</a></li>
 <li><a href="http://zh.planet.wikimedia.org/">zh.planet.wm</a></li>
 </ul>
 </p>
